--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </p> <br>
                     <br> 
                         
-                       <a href="http://prashantwadhwa.me/portfolio/yt_channel.html" target="_blank"><button  class="btn btn4">See More</button></a> 
+                       <a href="http://prashantwadhwa.me/yt_channel.html" target="_blank"><button  class="btn btn4">See More</button></a> 
                     <a href="https://www.youtube.com/prashantwadhwa?sub_confirmation=1" target="_blank">   
                     <button class="btn btn3">Subscribe Here</button></a> 
 
