--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="imgs/youtube_logo.jpg" alt="img not found">
+                    <img src="imgs/circle_logo.png" alt="img not found">
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">Youtube Channel</h1> <br> <br>
@@ -242,7 +242,7 @@
                                 class="fa-brands fa-linkedin"></i></a>
 
                     </div>
-                    <a href="imgs/imgg.pdf" download class="btn btn-2">Download CV</a>
+                    <!-- <a href="imgs/imgg.pdf" download class="btn btn-2">Download CV</a> -->
                 </div>
                 <div class="contact-right">
                     <form action="" name="submit-to-google-sheet">
@@ -314,7 +314,7 @@
 
     setTimeout(function load_func() {
       $('.eyes-8').fadeToggle();
-    }, 5000);
+    }, 3700);
     
 
 </script>
