removed phone no.

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <h1 class="subtitle">Contact Me</h1>
 
                     <p> <i class="fa-solid fa-envelope"> </i><span id="text-hover">prashantwadhwa19@gmail.com</span></p>
-                    <p> <i class="fa-solid fa-phone"> </i><span id="text-hover"> 9306640603</span></p>
+                    <!-- <p> <i class="fa-solid fa-phone"> </i><span id="text-hover"> 9306640603</span></p> -->
                     <div class="social-icons">
                         <a href="https://www.facebook.com/profile.php?id=100069326404520" target="_blank"><i
                                 class="fa-brands fa-facebook"></i></a>
