added todo project and made some changes to style

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#portfolio">Projects</a></li>
                     <li><a href="#youtube">YouTube Channel</a></li>
                     <li><a href="#contact">Contact</a></li>
 
@@ -150,7 +150,7 @@
                         <h3>To-Do list</h3>
                         <p>Add tasks like “Read work emails every day at 10am” to fill your to-do list in seconds using
                             Todo list’s powerful natural language recognition and recurring dates.</p>
-                        <a href="http://prashantwadhwa.me/portfolio/projects.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://todo-pw.netlify.app" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -160,7 +160,7 @@
                         <h3>Weather App</h3>
                         <p>This Weather App pulls from a variety of local and global sources to give Android owners the
                             most accurate forecasts possible.</p>
-                        <a href="http://prashantwadhwa.me/portfolio/projects.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="./projects.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -169,7 +169,7 @@
                     <div class="layer">
                         <h3>Notes App</h3>
                         <p>A one stop app to create and store all your notes in One Place!!</p>
-                        <a href="http://prashantwadhwa.me/portfolio/projects.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="./projects.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -178,7 +178,7 @@
                     <div class="layer">
                         <h3>Music Player</h3>
                         <p>A Music Player with a beautiful UI and some soothing musics :)</p>
-                        <a href="http://prashantwadhwa.me/portfolio/projects.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="./projects.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
                     </p> <br>
                     <br> 
                         
-                       <a href="http://prashantwadhwa.me/yt_channel.html" target="_blank"><button  class="btn btn4">See More</button></a> 
+                       <a href="yt_channel.html" target="_blank"><button  class="btn btn4">See More</button></a> 
                     <a href="https://www.youtube.com/prashantwadhwa?sub_confirmation=1" target="_blank">   
                     <button class="btn btn3">Subscribe Here</button></a> 
 
