--- a/projects.html
+++ b/projects.html
@@ -23,11 +23,11 @@
         <img src="imgs/RESPONSIVE.png" class="logo2" />
         <ul id="sidemenu">
           <li><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#youtube">YouTube Channel</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#services">Services</a></li>
+          <li><a href="index.html#portfolio">Projects</a></li>
+          <li><a href="index.html#youtube">YouTube Channel</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
 
           <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
         </ul>
@@ -38,7 +38,8 @@
         <h1 class="projs">
           Hey, I'm Working on My Projects...
         </h1>
-        <h1><span class="bang">Will Be Back With A BANG <i class="fa-solid fa-fire fire"></i> </span></h1>
+        <h1><span class="bang">STAY TUNED</span> <span class="bang-icon"><i class="fa-solid fa-face-laugh-wink"></i></span></h1>
+        
       </div>
     </div>
   </div>
