--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                 class="fa-brands fa-linkedin"></i></a>
 
                     </div>
-                    <a href="imgs/imgg.pdf" download class="btn btn-2">Download CV</a>
+                    <!-- <a href="imgs/imgg.pdf" download class="btn btn-2">Download CV</a> -->
                 </div>
                 <div class="contact-right">
                     <form action="" name="submit-to-google-sheet">
